--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ a{
 .container{
     height: 100vh;
     width: 100vw;
+    margin: auto;
 }
 
 nav{
@@ -22,7 +23,7 @@ nav{
 .nav_links{
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    float: right;
 }
 
 .nav_links a{
@@ -31,15 +32,111 @@ nav{
 
 .hero{
     height: 30vh;
+    width: 100vw;
     margin: auto;
     padding: 20px;
 }
 
 .hero_img{
-   margin-left: 30%;
+    display: flex;
+    justify-content: center;
+    /* align-items: baseline; */
+   /* width: 15vw;
+   margin: auto;
+   display: block; */
+
 }
 
 .hero_img img{
-    /* margin-top: 10%; */
-    /* top: 10%; */
+    display: flex;
+    align-items: baseline;
+    margin:60px auto 0 auto;
+    height: 92px;
+    aspect-ratio: auto 272 / 92;
+    width: 272px;
+    /* bottom: 0%; */
 }
+
+.form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+form{
+    display: flex;
+    /* justify-self: center; */
+    justify-content: space-between;
+    width: 600px;
+    padding:10px;
+    background: #f8f8ff;
+    /* border: 2px solid #000; */
+    border-radius: 20px;
+}
+
+.form input{
+    background: inherit;
+    width: 90%;
+    border: none;
+    padding: 5px;
+    outline: none;
+}
+
+.form input:hover{
+    outline: none;
+}
+
+button{
+    border: none;
+    font-size:14px;
+    border-radius: 4px;
+    height: 36px;
+    min-width: 54px;
+    text-align: center;
+    cursor: pointer;
+    padding:0  16px;
+    margin: 20px;
+   
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+}
+
+.mid_section{
+    display: flex;
+    justify-content: center;
+}
+
+.mid_section a{
+    color: #204AB5;
+    margin: 5px;
+}
+
+footer{
+    background: #e6e6e6;
+    position: fixed;
+    padding-top: 19px;
+    bottom: 0;
+    width: 100%;
+}
+
+footer > span{
+    padding: 15px;
+    display: block;
+}
+
+.footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 10px;
+}
+
+.footer a{
+    margin: 10px;
+}
+
+
+
