--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,14 @@ a{
     margin: auto;
 }
 
+.mobile{
+    display: none;
+}
+
+.desktop{
+    display:none;
+}
+
 nav{
     padding: 15px;
     height: 10vh;
@@ -40,17 +48,13 @@ nav{
 .hero_img{
     display: flex;
     justify-content: center;
-    /* align-items: baseline; */
-   /* width: 15vw;
-   margin: auto;
-   display: block; */
-
+    /* margin: 20px 0 0 0; */
 }
 
 .hero_img img{
     display: flex;
     align-items: baseline;
-    margin:60px auto 0 auto;
+    margin:65px auto 0 auto;
     height: 92px;
     aspect-ratio: auto 272 / 92;
     width: 272px;
@@ -65,13 +69,12 @@ nav{
 
 form{
     display: flex;
-    /* justify-self: center; */
     justify-content: space-between;
     width: 600px;
     padding:10px;
-    background: #f8f8ff;
-    /* border: 2px solid #000; */
-    border-radius: 20px;
+    /* background: #f8f8ff; */
+    border: 2px solid #f2f2f2;
+    border-radius: 30px;
 }
 
 .form input{
@@ -82,7 +85,8 @@ form{
     outline: none;
 }
 
-.form input:hover{
+form:hover{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);;
     outline: none;
 }
 
@@ -107,6 +111,7 @@ button{
 .mid_section{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .mid_section a{
@@ -120,6 +125,11 @@ footer{
     padding-top: 19px;
     bottom: 0;
     width: 100%;
+    color: grey;
+}
+
+footer a{
+    color: grey;
 }
 
 footer > span{
@@ -128,15 +138,87 @@ footer > span{
 }
 
 .footer{
+    font-size: 14px;
     display: flex;
     justify-content: space-between;
     align-items: baseline;
     padding: 10px;
+    /* color: #e6e6e6; */
 }
 
 .footer a{
     margin: 10px;
 }
+
+
+ 
+.desktop{
+    display: block;
+} 
+
+
+@media screen and (max-width: 768px) {
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+    body {
+      width: 100%;
+      align-items: center;
+    }
+
+    .desktop{
+        display: none;
+    }
+
+    .mobile{
+        display: block;
+    }
+
+    .nav_links{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 44px;
+    }
+
+    .mobile_nav{
+        display: flex;
+        align-items: center;
+    }
+
+    .mobile_nav a:hover{
+       color: #204AB5;
+    }
+
+    .mid_section{
+        display: block;
+        text-align: center;
+        margin: 20px 0 0 0 ;
+        line-height: 30px;
+    }
+
+
+
+    .search{
+        width: 95vw;
+    }
+
+
+
+    .footer > span{
+        padding: 0;
+    }
+    .m{
+        margin: auto;
+        display: block;
+        /* align-items: center; */
+        justify-content: center;
+    }
+  }
 
 
 
